--- a/blog.html
+++ b/blog.html
@@ -2,9 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Skateboard Video Platform</title>
+  <title>CodePen - Skateboard blog Platform</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='https://vjs.zencdn.net/5-unsafe/video-js.css'><link rel="stylesheet" href="./style.css">
+<link rel='stylesheet' href='https://vjs.zencdn.net/5-unsafe/blog-js.css'><link rel="stylesheet" href="./style.css?v=1">
 
 </head>
 <body>
@@ -99,23 +99,24 @@
   </div>
   <div class="main-container show">
     <div class="stream-area">
-        <div class="video-stream">
-         <video id="my_video_1" class="video-js vjs-default-skin anim" width="640px" height="267px" controls preload="none" poster='https://images.unsplash.com/photo-1476801071117-fbc157ae3f01?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDh8fHxlbnwwfHx8&w=1000&q=80' data-setup='{ "aspectRatio":"940:620", "playbackRates": [1, 1.5, 2] }'>
-          <source src="https://player.vimeo.com/external/390402719.sd.mp4?s=20cfdb066c4253047562b65bd4e411b86a004bc5&profile_id=139&oauth2_token_id=57447761" type='video/mp4' />
-          <source src="https://player.vimeo.com/external/390402719.sd.mp4?s=20cfdb066c4253047562b65bd4e411b86a004bc5&profile_id=139&oauth2_token_id=57447761" type='video/webm' />
-         </video>
-         <div class="video-detail">
-          <div class="video-content">
-           <div class="video-p-wrapper anim" style="--delay: .1s">
-            <div class="author-img__wrapper video-author video-p">
+        <div class="blog-stream">
+         <!-- <blog id="my_blog_1" class="blog-js vjs-default-skin anim" width="640px" height="267px" controls preload="none" poster='https://images.unsplash.com/photo-1476801071117-fbc157ae3f01?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDh8fHxlbnwwfHx8&w=1000&q=80' data-setup='{ "aspectRatio":"940:620", "playbackRates": [1, 1.5, 2] }'>
+          <source src="https://player.vimeo.com/external/390402719.sd.mp4?s=20cfdb066c4253047562b65bd4e411b86a004bc5&profile_id=139&oauth2_token_id=57447761" type='blog/mp4' />
+          <source src="https://player.vimeo.com/external/390402719.sd.mp4?s=20cfdb066c4253047562b65bd4e411b86a004bc5&profile_id=139&oauth2_token_id=57447761" type='blog/webm' />
+         </blog> -->
+         <img src="https://imgs.search.brave.com/5dp766lG1faMUaP2XUv3KEhbFsBJycXTgkulofXv3k0/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9pbWcu/ZnJlZXBpay5jb20v/ZnJlZS1waG90by9z/cGFjZS1wbGFuZXQt/c2NpZW5jZS1uaWdo/dC1nZW5lcmF0ZWQt/YnktYWlfMTg4NTQ0/LTE1NjE5LmpwZz9z/aXplPTYyNiZleHQ9/anBn" width="100%" >
+         <div class="blog-detail">
+          <div class="blog-content">
+           <div class="blog-p-wrapper anim" style="--delay: .1s">
+            <div class="author-img__wrapper blog-author blog-p">
              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
               <path d="M20 6L9 17l-5-5" />
              </svg>
              <img class="author-img" src="https://images.pexels.com/photos/1680172/pexels-photo-1680172.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" />
             </div>
-            <div class="video-p-detail">
-             <div class="video-p-name">Andy William</div>
-             <div class="video-p-sub">1,980,893 subscribers</div>
+            <div class="blog-p-detail">
+             <div class="blog-p-name">Andy William</div>
+             <div class="blog-p-sub">1,980,893 subscribers</div>
             </div>
             <div class="button-wrapper">
              <button class="like">
@@ -132,14 +133,14 @@
              </button>
             </div>
            </div>
-           <div class="video-p-title anim" style="--delay: .2s">Basic how to ride your Skateboard</div>
-           <div class="video-p-subtitle anim" style="--delay: .3s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus illum tempora consequuntur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis earum velit accusantium maiores qui sit quas, laborum voluptatibus vero quidem tempore facilis voluptate tempora deserunt! </div>
-           <div class="video-p-subtitle anim" style="--delay: .4s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus laborum qui dolorum fugiat eius accusantium repellendus illum tempora consequuntur. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</div>
+           <div class="blog-p-title anim" style="--delay: .2s">Basic how to ride your Skateboard</div>
+           <div class="blog-p-subtitle anim" style="--delay: .3s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus illum tempora consequuntur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis earum velit accusantium maiores qui sit quas, laborum voluptatibus vero quidem tempore facilis voluptate tempora deserunt! </div>
+           <div class="blog-p-subtitle anim" style="--delay: .4s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus laborum qui dolorum fugiat eius accusantium repellendus illum tempora consequuntur. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</div>
           </div>
          </div>
         </div>
         <div class="chat-stream">
-         <div class="chat">
+         <!-- <div class="chat">
           <div class="chat-header anim">Live Chat<span><svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
              <path fill-rule="evenodd" clip-rule="evenodd" d="M14.212 7.762c0 2.644-2.163 4.763-4.863 4.763-2.698 0-4.863-2.119-4.863-4.763C4.486 5.12 6.651 3 9.35 3c2.7 0 4.863 2.119 4.863 4.762zM2 17.917c0-2.447 3.386-3.06 7.35-3.06 3.985 0 7.349.634 7.349 3.083 0 2.448-3.386 3.06-7.35 3.06C5.364 21 2 20.367 2 17.917zM16.173 7.85a6.368 6.368 0 01-1.137 3.646c-.075.107-.008.252.123.275.182.03.369.048.56.052 1.898.048 3.601-1.148 4.072-2.95.697-2.675-1.35-5.077-3.957-5.077a4.16 4.16 0 00-.818.082c-.036.008-.075.025-.095.055-.025.04-.007.09.019.124a6.414 6.414 0 011.233 3.793zm3.144 5.853c1.276.245 2.115.742 2.462 1.467a2.107 2.107 0 010 1.878c-.531 1.123-2.245 1.485-2.912 1.578a.207.207 0 01-.234-.232c.34-3.113-2.367-4.588-3.067-4.927-.03-.017-.036-.04-.034-.055.002-.01.015-.025.038-.028 1.515-.028 3.145.176 3.747.32z" />
             </svg>
@@ -148,84 +149,84 @@
           </div>
           <div class="message-container">
            <div class="message anim" style="--delay: .1s">
-            <div class="author-img__wrapper video-author video-p">
+            <div class="author-img__wrapper blog-author blog-p">
              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
               <path d="M20 6L9 17l-5-5" />
              </svg>
              <img class="author-img" src="https://images.unsplash.com/photo-1560941001-d4b52ad00ecc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" />
             </div>
             <div class="msg-wrapper">
-             <div class="msg__name video-p-name"> Wijaya Adabi</div>
-             <div class="msg__content video-p-sub"> Lorem ipsum clor sit, ame conse quae debitis</div>
+             <div class="msg__name blog-p-name"> Wijaya Adabi</div>
+             <div class="msg__content blog-p-sub"> Lorem ipsum clor sit, ame conse quae debitis</div>
             </div>
            </div>
            <div class="message anim" style="--delay: .2s">
-            <div class="author-img__wrapper video-author video-p">
+            <div class="author-img__wrapper blog-author blog-p">
              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
               <path d="M20 6L9 17l-5-5" />
              </svg>
              <img class="author-img" src="https://images.pexels.com/photos/2889942/pexels-photo-2889942.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" />
             </div>
             <div class="msg-wrapper">
-             <div class="msg__name video-p-name offline"> Johny Wise</div>
-             <div class="msg__content video-p-sub"> Suscipit eos atque voluptates labore</div>
+             <div class="msg__name blog-p-name offline"> Johny Wise</div>
+             <div class="msg__content blog-p-sub"> Suscipit eos atque voluptates labore</div>
             </div>
            </div>
            <div class="message anim" style="--delay: .3s">
-            <div class="author-img__wrapper video-author video-p">
+            <div class="author-img__wrapper blog-author blog-p">
              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
               <path d="M20 6L9 17l-5-5" />
              </svg>
              <img class="author-img" src="https://images.unsplash.com/photo-1496345875659-11f7dd282d1d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mzl8fG1lbnxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" />
             </div>
             <div class="msg-wrapper">
-             <div class="msg__name video-p-name offline"> Budi Hakim</div>
-             <div class="msg__content video-p-sub">Dicta quidem sunt adipisci</div>
+             <div class="msg__name blog-p-name offline"> Budi Hakim</div>
+             <div class="msg__content blog-p-sub">Dicta quidem sunt adipisci</div>
             </div>
            </div>
            <div class="message anim" style="--delay: .4s">
-            <div class="author-img__wrapper video-author video-p">
+            <div class="author-img__wrapper blog-author blog-p">
              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
               <path d="M20 6L9 17l-5-5" />
              </svg>
              <img class="author-img" src="https://images.pexels.com/photos/1870163/pexels-photo-1870163.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" />
             </div>
             <div class="msg-wrapper">
-             <div class="msg__name video-p-name"> Thomas Hope</div>
-             <div class="msg__content video-p-sub"> recusandae doloremque aperiam alias molestias</div>
+             <div class="msg__name blog-p-name"> Thomas Hope</div>
+             <div class="msg__content blog-p-sub"> recusandae doloremque aperiam alias molestias</div>
             </div>
            </div>
            <div class="message anim" style="--delay: .5s">
-            <div class="author-img__wrapper video-author video-p">
+            <div class="author-img__wrapper blog-author blog-p">
              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
               <path d="M20 6L9 17l-5-5" />
              </svg>
              <img class="author-img" src="https://images.pexels.com/photos/1680172/pexels-photo-1680172.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" />
             </div>
             <div class="msg-wrapper">
-             <div class="msg__name video-p-name"> Gerard Will</div>
-             <div class="msg__content video-p-sub">Dicta quidem sunt adipisci</div>
+             <div class="msg__name blog-p-name"> Gerard Will</div>
+             <div class="msg__content blog-p-sub">Dicta quidem sunt adipisci</div>
             </div>
            </div>
            <div class="message anim" style="--delay: .6s">
-            <div class="author-img__wrapper video-author video-p">
+            <div class="author-img__wrapper blog-author blog-p">
              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
               <path d="M20 6L9 17l-5-5" />
              </svg>
              <img class="author-img" src="https://images.pexels.com/photos/2889942/pexels-photo-2889942.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" />
             </div>
             <div class="msg-wrapper">
-             <div class="msg__name video-p-name offline">Johny Wise</div>
-             <div class="msg__content video-p-sub"> recusandae doloremque aperiam alias molestias</div>
+             <div class="msg__name blog-p-name offline">Johny Wise</div>
+             <div class="msg__content blog-p-sub"> recusandae doloremque aperiam alias molestias</div>
             </div>
            </div>
           </div>
           <div class="chat-footer anim" style="--delay: .1s">
            <input type="text" placeholder="Write your message">
           </div>
-         </div>
+         </div> -->
          <div class="chat-vid__container">
-          <div class="chat-vid__title anim" style="--delay: .3s">Related Videos</div>
+          <div class="chat-vid__title anim" style="--delay: .3s">Related blogs</div>
           <div class="chat-vid anim" style="--delay: .4s">
            <div class="chat-vid__wrapper">
             <img class="chat-vid__img" src="https://cdn.nohat.cc/thumb/f/720/3b55eddcfffa4e87897d.jpg" />
@@ -246,7 +247,7 @@
             </div>
            </div>
           </div>
-          <div class="chat-vid__button anim" style="--delay: .6s">See All related videos (32)</div>
+          <div class="chat-vid__button anim" style="--delay: .6s">See All related blogs (32)</div>
          </div>
         </div>
        </div>
@@ -259,7 +260,7 @@
 </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://vjs.zencdn.net/5-unsafe/video.js'></script><script  src="./script.js"></script>
+<script src='https://vjs.zencdn.net/5-unsafe/blog.js'></script><script  src="./script.js"></script>
 
 </body>
 </html>
