--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Skateboard Video Platform</title>
+  <title>CodePen - Skateboard blog Platform</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='https://vjs.zencdn.net/5-unsafe/video-js.css'><link rel="stylesheet" href="./style.css">
+<link rel='stylesheet' href='https://vjs.zencdn.net/5-unsafe/blog-js.css'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
@@ -134,74 +134,74 @@
     </div>
    </div>
    <div class="small-header anim" style="--delay: .3s">Most Watched</div>
-   <div class="videos">
-    <div class="video anim" style="--delay: .4s">
-     <div class="video-time">8 min</div>
-     <div class="video-wrapper">
-      <video muted="">
-       <source src="https://player.vimeo.com/external/436572488.sd.mp4?s=eae5fb490e214deb9ff532dd98d101efe94e7a8b&profile_id=139&oauth2_token_id=57447761" type="video/mp4">
-      </video>
-      <div class="author-img__wrapper video-author">
+   <div class="blogs">
+    <div class="blog anim" style="--delay: .4s">
+     <div class="blog-time">8 min</div>
+     <div class="blog-wrapper">
+      <blog muted="">
+       <source src="https://player.vimeo.com/external/436572488.sd.mp4?s=eae5fb490e214deb9ff532dd98d101efe94e7a8b&profile_id=139&oauth2_token_id=57447761" type="blog/mp4">
+      </blog>
+      <div class="author-img__wrapper blog-author">
        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
         <path d="M20 6L9 17l-5-5" />
        </svg>
        <img class="author-img" src="https://images.pexels.com/photos/1680172/pexels-photo-1680172.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" />
       </div>
      </div>
-     <div class="video-by">Andy William</div>
-     <div class="video-name">Basic how to ride your skateboard comfortly</div>
-     <div class="video-view">54K views<span class="seperate video-seperate"></span>1 week ago</div>
+     <div class="blog-by">Andy William</div>
+     <div class="blog-name">Basic how to ride your skateboard comfortly</div>
+     <div class="blog-view">54K views<span class="seperate blog-seperate"></span>1 week ago</div>
     </div>
-    <div class="video anim" style="--delay: .5s">
-     <div class="video-time">5 min</div>
-     <div class="video-wrapper">
-      <video muted="">
-       <source src="https://player.vimeo.com/external/449972745.sd.mp4?s=9943177fe8a6147b7bc4598259401f06ec57878a&profile_id=139&oauth2_token_id=57447761" type="video/mp4">
-      </video>
-      <div class="author-img__wrapper video-author">
+    <div class="blog anim" style="--delay: .5s">
+     <div class="blog-time">5 min</div>
+     <div class="blog-wrapper">
+      <blog muted="">
+       <source src="https://player.vimeo.com/external/449972745.sd.mp4?s=9943177fe8a6147b7bc4598259401f06ec57878a&profile_id=139&oauth2_token_id=57447761" type="blog/mp4">
+      </blog>
+      <div class="author-img__wrapper blog-author">
        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
         <path d="M20 6L9 17l-5-5" />
        </svg>
        <img class="author-img" src="https://images.pexels.com/photos/3370021/pexels-photo-3370021.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" />
       </div>
      </div>
-     <div class="video-by offline">Gerard Bind</div>
-     <div class="video-name">Prepare for your first skateboard jump</div>
-     <div class="video-view">42K views<span class="seperate video-seperate"></span>1 week ago</div>
+     <div class="blog-by offline">Gerard Bind</div>
+     <div class="blog-name">Prepare for your first skateboard jump</div>
+     <div class="blog-view">42K views<span class="seperate blog-seperate"></span>1 week ago</div>
     </div>
-    <div class="video anim" style="--delay: .6s">
-     <div class="video-time">7 min</div>
-     <div class="video-wrapper">
-      <video muted="">
-       <source src="https://player.vimeo.com/external/436553499.sd.mp4?s=0e44527f269278743db448761e35c5e39cfaa52c&profile_id=139&oauth2_token_id=57447761" type="video/mp4">
-      </video>
-      <div class="author-img__wrapper video-author">
+    <div class="blog anim" style="--delay: .6s">
+     <div class="blog-time">7 min</div>
+     <div class="blog-wrapper">
+      <blog muted="">
+       <source src="https://player.vimeo.com/external/436553499.sd.mp4?s=0e44527f269278743db448761e35c5e39cfaa52c&profile_id=139&oauth2_token_id=57447761" type="blog/mp4">
+      </blog>
+      <div class="author-img__wrapper blog-author">
        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
         <path d="M20 6L9 17l-5-5" />
        </svg>
        <img class="author-img" src="https://images.pexels.com/photos/1870163/pexels-photo-1870163.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" />
       </div>
      </div>
-     <div class="video-by offline">John Wise</div>
-     <div class="video-name">Basic equipment to play skateboard safely</div>
-     <div class="video-view">64K views<span class="seperate video-seperate"></span>2 week ago</div>
+     <div class="blog-by offline">John Wise</div>
+     <div class="blog-name">Basic equipment to play skateboard safely</div>
+     <div class="blog-view">64K views<span class="seperate blog-seperate"></span>2 week ago</div>
     </div>
-    <div class="video anim" style="--delay: .7s">
-     <div class="video-time">6 min</div>
-     <div class="video-wrapper">
-      <video muted="">
-       <source src="https://player.vimeo.com/external/361861493.sd.mp4?s=19d8275ca755d653042a87ef28b2f0b2eabf57d0&profile_id=139&oauth2_token_id=57447761" type="video/mp4">
-      </video>
-      <div class="author-img__wrapper video-author">
+    <div class="blog anim" style="--delay: .7s">
+     <div class="blog-time">6 min</div>
+     <div class="blog-wrapper">
+      <blog muted="">
+       <source src="https://player.vimeo.com/external/361861493.sd.mp4?s=19d8275ca755d653042a87ef28b2f0b2eabf57d0&profile_id=139&oauth2_token_id=57447761" type="blog/mp4">
+      </blog>
+      <div class="author-img__wrapper blog-author">
        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
         <path d="M20 6L9 17l-5-5" />
        </svg>
        <img class="author-img" src="https://images.pexels.com/photos/2889942/pexels-photo-2889942.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" />
       </div>
      </div>
-     <div class="video-by">Budi Hakim</div>
-     <div class="video-name">Tips to playing skateboard on the ramp</div>
-     <div class="video-view">50K views<span class="seperate video-seperate"></span>1 week ago</div>
+     <div class="blog-by">Budi Hakim</div>
+     <div class="blog-name">Tips to playing skateboard on the ramp</div>
+     <div class="blog-view">50K views<span class="seperate blog-seperate"></span>1 week ago</div>
     </div>
    </div>
   </div>
@@ -209,7 +209,7 @@
 </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://vjs.zencdn.net/5-unsafe/video.js'></script><script  src="./script.js"></script>
+<script src='https://vjs.zencdn.net/5-unsafe/blog.js'></script><script  src="./script.js"></script>
 
 </body>
 </html>
