--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CodePen - Skateboard blog Platform</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://vjs.zencdn.net/5-unsafe/blog-js.css'><link rel="stylesheet" href="./style.css?v=1">
